# py-airtable-sync

./: .gitignore  pyproject.toml
py_airtable_sync/: __init__.py  airtable_manager.py  config.py  manager.py
tests/: test_airtable_manager.py  test_manager.py
